# nemesis

./: Makefile  README.md
.github/workflows/: bench-ecc.yml  bench-nccl.yml  bench-scheduler.yml  ci.yml
agents/: .gitignore  pyproject.toml
agents/nemesis/: hook.py
agents/nemesis/agents/: healer.py  scheduler.py  telemetry.py
agents/nemesis/grpc/: __init__.py  healer_pb2.py  healer_pb2_grpc.py  telemetry_pb2.py  telemetry_pb2_grpc.py  topology_pb2.py  topology_pb2_grpc.py
agents/nemesis/models/: ecc_predictor.py
agents/playbooks/: checkpoint_corruption_recovery.yaml  communicator_deadlock_recovery.yaml  compute_timeout.yaml  dram_bandwidth_degradation.yaml  driver_hang_recovery.yaml  ecc_isolation.yaml  gradient_explosion_isolation.yaml  ib_congestion_recovery.yaml  memory_fragmentation_recovery.yaml  multi_gpu_correlated_failure.yaml  network_partition.yaml  numa_rebalance.yaml  nvlink_reset.yaml  pcie_error_recovery.yaml  power_capping_event.yaml  sm_utilization_anomaly.yaml  spot_preemption_checkpoint.yaml  thermal_throttle_recovery.yaml  topology_rebinding.yaml  xid_error_triage.yaml
agents/tests/: test_assert_gate.py  test_ecc_predictor.py  test_healer_agent.py  test_hook.py  test_p1_benchmark.py  test_p2_benchmark.py  test_p3_benchmark.py  test_playbooks.py  test_proto_stubs.py  test_scheduler_agent.py  test_telemetry_agent.py  test_workflow_yamls.py
benchmarks/: assert_gate.py  print_table1.py
benchmarks/p1_ecc_prediction/: run.py  synthetic.py
benchmarks/p2_scheduler_mfu/: bandwidth_model.py  run.py
benchmarks/p3_nccl_shrink/: run_full.py
proto/: healer.proto  telemetry.proto  topology.proto
results/: ecc.json
sim/: Cargo.toml
sim/crates/nemesis-sim/: Cargo.toml
sim/crates/nemesis-sim/src/: bandwidth.rs  cluster.rs  config.rs  main.rs  scenario.rs
sim/crates/nemesis-sim/src/services/: healer.rs  telemetry.rs  topology.rs
sim/k8s/: cluster-nvlink.yaml  cluster-pcie-crossnode.yaml  nemesis-sim.yaml
sim/scenarios/: ecc_escalation.yaml  nvlink_degradation.yaml  spot_preemption.yaml
substrate/: Cargo.toml
substrate/crates/nemesis-graph/: Cargo.toml
substrate/crates/nemesis-graph/src/: graph.rs  lib.rs
substrate/crates/nemesis-graph/tests/: graph_tests.rs
substrate/crates/nemesis-nccl/: Cargo.toml
substrate/crates/nemesis-nccl/src/: backend.rs  lib.rs  real.rs  service.rs  sim.rs
substrate/crates/nemesis-nccl/tests/: shrink_tests.rs
substrate/crates/nemesis-proto/: Cargo.toml  build.rs
substrate/crates/nemesis-proto/src/: lib.rs
substrate/crates/nemesis-substrate/: Cargo.toml
substrate/crates/nemesis-substrate/src/: main.rs
substrate/crates/nemesis-substrate/tests/: integration_test.rs
substrate/crates/nemesis-telemetry/: Cargo.toml
substrate/crates/nemesis-telemetry/src/: lib.rs  ring.rs  service.rs  store.rs
substrate/crates/nemesis-telemetry/tests/: ring_tests.rs
substrate/crates/nemesis-topology/: Cargo.toml
substrate/crates/nemesis-topology/src/: checker.rs  lexer.rs  lib.rs  parser.rs  service.rs  solver.rs
substrate/crates/nemesis-topology/tests/: checker_tests.rs  parser_tests.rs  solver_tests.rs
