[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemesis-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=5.27.0",
    "anthropic>=0.30.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nemesis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
