[workspace]
members = [
    "crates/nemesis-proto",
    "crates/nemesis-graph",
    "crates/nemesis-telemetry",
    "crates/nemesis-topology",
    "crates/nemesis-nccl",
    "crates/nemesis-substrate",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tonic       = "0.12"
prost       = "0.13"
petgraph    = "0.6"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
async-trait = "0.1"
uuid        = { version = "1", features = ["v4"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
