[package]
name = "nemesis-nccl"
version = "0.1.0"
edition = "2021"

[dependencies]
nemesis-proto = { path = "../nemesis-proto" }
tokio         = { workspace = true }
tonic         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
uuid          = { workspace = true }
parking_lot   = { workspace = true }
