[package]
name = "nemesis-topology"
version = "0.1.0"
edition = "2021"

[dependencies]
nemesis-proto = { path = "../nemesis-proto" }
nemesis-graph = { path = "../nemesis-graph" }
tokio         = { workspace = true }
tonic         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
parking_lot   = { workspace = true }
